--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -34,6 +34,16 @@
       </mat-form-field>
 
       <mat-form-field appearance="outline">
+        <mat-label>What other genre would you categorize this as?</mat-label>
+        <input matInput placeholder="Enter genre" formControlName="othergenre" [formControl]="genreControl" [matAutocomplete]="autoGenre"/>
+        <mat-autocomplete #autoGenre="matAutocomplete">
+          <mat-option *ngFor="let option of filteredGenreOptions | async" [value]="option" (click)="addOtherGenre(option)">
+            {{option}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
         <mat-label>What instruments do you hear in the song?</mat-label>
         <mat-chip-list #tagList>
           <mat-chip *ngFor="let tag of instrumentTags; let i = index" (removed)="removeInstrumentTag(tag, i)"
